content/terraform/v1.8.x/docs/language/functions/index.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Terraform and the Terraform logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/terraform/blob/-/LICENSE

page_title: Functions - Configuration Language
description: >-
  An introduction to the built-in functions that you can use to transform and
  combine values in expressions.
---

# Built-in Functions

> **Hands-on:** Try the [Perform Dynamic Operations with Functions](/terraform/tutorials/configuration-language/functions?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial.

The Terraform language includes a number of built-in functions that you can
call from within expressions to transform and combine values. The general
syntax for function calls is a function name followed by comma-separated
arguments in parentheses:

```hcl
max(5, 12, 9)
```

For more details on syntax, see
[_Function Calls_](/terraform/language/expressions/function-calls)
in the Expressions section.

# Provider-defined Functions

You cannot define your own functions in the Terraform configuration language, but
you can develop your own providers that expose functions. Refer to
[Provider-defined functions](/terraform/plugin/framework/functions)
for information about defining functions in custom providers.

When using a provider-specific function, add the `provider::<local-name>::` where
`<local-name>` corresponds with an entry in the `required_providers` block.
The following example calls the `encode_tfvars` function in the `terraform` provider:

```hcl
provider::terraform::encode_tfvars({
  example = "Hello!"
})
```

The documentation covers the built-in functions and built-in provider-defined functions only.

Functions defined by external providers are documented by those providers
in the [Terraform Registry](https://registry.terraform.io/browse/providers).

# Experimenting with Functions

You can experiment with the behavior of Terraform's built-in functions from
the Terraform expression console, by running
[the `terraform console` command](/terraform/cli/commands/console):

```
> max(5, 12, 9)
12
```

The examples in the documentation for each function use console output to
illustrate the result of calling the function with different parameters.
